--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "main": "public/electron.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently -n react,electron -c \"bgBlue.bold,bgMagenta.bold\", --prefix \" [{time}] {name} \" -s -k \"npm:start\" \"npm:electron\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +37,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "concurrently": "^7.6.0",
+    "electron": "^22.0.0",
+    "electron-is-dev": "^2.0.0",
+    "wait-on": "^7.0.1"
   }
 }
