--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
     "ejs": "^3.1.8",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
+    "express-jwt": "^8.2.1",
     "express-openid-connect": "^2.11.0",
     "express-session": "^1.17.3",
     "http-errors": "~1.8.1",
+    "jwks-rsa": "^3.0.0",
     "morgan": "~1.10.0",
     "request": "^2.88.2"
   },
